 2012-06-04 11:54  alexpeshkoff 
   M src/jrd/event.cpp
Backported fix for CORE-3859: Too many different dynamic events crash server

 2012-04-26 09:38  paulbeach 
   M builds/install/misc/firebird.conf
Make the conf. parameter DummyPacketInterval more accurate.

 2012-02-13 06:53  alexpeshkoff 
   M src/dsql/dsql.tab.h
   M src/dsql/parse.cpp
Files auto-generated by bison

 2012-02-08 15:51  paul_reeves 
   M builds/install/arch-specific/win32/After_Installation.url
   M builds/install/arch-specific/win32/BuildExecutableInstall.bat
   M builds/install/arch-specific/win32/FirebirdInstall_20.iss
Sync changes to tag R207 into B2_0_Release
 - Amend URL to use release specific landing page

 2012-02-08 15:31  paul_reeves 
   M builds/install/arch-specific/win32/BuildExecutableInstall.bat
   M builds/install/arch-specific/win32/FirebirdInstall_20.iss
   M builds/install/arch-specific/win32/Readme.txt
   M builds/install/arch-specific/win32/ba/Instalacija_ProcitajMe.txt
   M builds/install/arch-specific/win32/ba/ProcitajMe.txt
   M builds/install/arch-specific/win32/ba/custom_messages_ba.inc
   M builds/install/arch-specific/win32/de/installation_liesmich.txt
   M builds/install/arch-specific/win32/de/liesmich.txt
   M builds/install/arch-specific/win32/es/leame.txt
   M builds/install/arch-specific/win32/es/leame_instalacion.txt
   M builds/install/arch-specific/win32/fr/installation_lisezmoi.txt
   M builds/install/arch-specific/win32/fr/lisezmoi.txt
   M builds/install/arch-specific/win32/hu/custom_messages_hu.inc
   M builds/install/arch-specific/win32/hu/olvass_el.txt
   M builds/install/arch-specific/win32/hu/telepitesi_segedlet.txt
   M builds/install/arch-specific/win32/i18n_readme.txt
   M builds/install/arch-specific/win32/installation_readme.txt
   M builds/install/arch-specific/win32/it/leggimi.txt
   M builds/install/arch-specific/win32/it/leggimi_installazione.txt
   M builds/install/arch-specific/win32/pl/czytajto.txt