@@ -1,3 +1,7 @@
+ 2012-06-20 09:37  paulbeach 
+   M builds/posix/postfix.darwin
+Copy libfbclient.dylib to Firebird SuperServer Framework Libraries to support the ODBC driver
+
  2012-06-04 11:54  alexpeshkoff 
    M src/jrd/event.cpp
 Backported fix for CORE-3859: Too many different dynamic events crash server
